style.css
* {
  margin: 0;
  padding: 0;
}
/* common button  */
.common-button {
  padding: 10px 20px;
  border-radius: 10px;
  border: none;
  background-color: #1d4ed8;
  color: white;
}
/* common section padding  */
section {
  padding: 80px 8%;
}
/* common h2 alignment  */

/* nav style  */
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px 8%;
}
.main-logo img {
  width: 100%;
}
.menu ul {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
}
.menu ul li {
  list-style: none;
}
.menu ul li a {
  text-decoration: none;
  color: black;
}

.common-button a {
  text-decoration: none;
  color: white;
}

/* Hero-section-style */
header {
  background-color: #1d4ed8;
  background-image:
    linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.2)),
    url("./assets/banner.jpg");
  height: 90vh;
  background-size: cover;
  background-repeat: no-repeat;
}
.hero-contain {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  height: 100%;
  gap: 25px;
  color: white;
}

.hero-contain h1 {
  margin-top: 110px;
  font-size: 3rem;
}

.hero-contain p {
  margin-bottom: 15%;
  width: 35%;
  text-align: center;
}

.hero-contain button {
  margin-bottom: 25px;
}

/* meet section style  */
section .card-main-text {
  text-align: center;
  font-size: 2.5rem;
  margin-bottom: 30px;
}

.card-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 30px;
}
.card {
  border: 1px solid #e5e7eb;
  border-radius: 10px;
  margin-top: 10px;
  overflow: hidden;
}
.card img {
  width: 100%;
  /* border-radius: 10px 10px 0 0; */
}
.card-content {
  padding: 20px;
  display: grid;
  gap: 10px;
}
/* .card p{
    margin-top: 15px;
    color: #575757;
}
.card h3{
    margin-top: 15px;
} */
.card-pera {
  color: #2563eb;
}

/* price card style  */

.price-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 20px;
}

.price-content {
  text-align: center;
  padding-bottom: 50px;
  /* display: grid;
    gap: 10px;
    justify-content: center;
    align-items: center;
    padding-bottom: 25px; */
}
.price-content .price-content-first-pera {
  color: #575757;
}
.price-content h2 {
  font-size: 3rem;
  padding-bottom: 15px;
}

.price-card {
  padding: 40px 30px;
  border-radius: 10px;
  display: grid;
  gap: 20px;
  border: 1px solid #e5e7eb;
}
.price-card-middle {
  background-color: #0d1b2a;

  /* color: white; */
}
.price-card-middle .card-middle-pera {
  color: #93c5fd;
}
.price-card ul {
  list-style-position: inside;
}
.price-card-middle .middle-card-list {
  color: #ffffff;
  opacity: 70%;
}

.button-white {
  padding: 10px;
  border-radius: 10px;
  border: 2px solid #2563eb;
  background-color: white;
  color: #2563eb;
}
.button-black {
  padding: 10px;
  border-radius: 10px;
  background-color: white;
}
.price-card span {
  font-size: 3rem;
  font-weight: 700;
  margin: -20px 0;
}
.price-card .middle-span {
  color: white;
}
.price-card ul li {
  padding: 5px 0;
}
.price-card ul li::marker {
  color: #60a5fa;
}
.divider {
  width: 100%;
  height: 1px;
  background-color: #e5e7eb;
}
.divider-middle {
  width: 100%;
  height: 1px;
  background-color: #ffffff;
  opacity: 10%;
}
.price-card .card-pera {
  color: #888888;
}
.price-card .card-list {
  color: #333333;
}
/* why-choose-style  */
.why-choose-card-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-content: center;
  align-items: center;
  gap: 30px;
}
section .why-attend-pera{
  color: #2563eb;
}
.why-choose-card{
  display: grid;
  gap: 20px;
  justify-content: center;
  align-items: center;
  text-align: center;
  border: 1px solid #e5e7eb;
  border-radius: 10px;
  padding: 60px 20px;
}
.why-choose-card i{
  display: block;
  margin: auto;
color: #2563eb;
}
.why-choose-content {
  text-align: center;
  margin-bottom: 50px;
  display: grid;
  gap: 15px;
}
.why-choose-headline{
  font-size: 2rem;
  
}
.why-choose-pera{
  color: #575757;
}
.why-choose-text{
  color: #575757;
}
/* footer style  */
footer{
  background-color: #07101f;
  padding: 80px 8%;
}
.footer-top {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  margin-bottom: 20px;
  justify-content: center;
  gap: 230px;
  /* align-items: center; */
  /* height: 50vh; */
  
}
.footer-top p {
  width: 300px;
  color: #b8c0cc;
  margin-top: 10px;
}

.footer-container h3 {
  color: white;
  margin-bottom: 30px;
}

.footer-container ul {
  list-style: none;
  color: #b8c0cc;
}
.footer-container ul li a {
  text-decoration: none;
  color: #b8c0cc;
}
.footer-container ul li {
  margin-bottom: 10px;
}
.footer-divider {
  width: 100%;
  height: 1px;
  background-color: #e5e7eb;
  opacity: 70%;
  
  margin: auto;
  
}

.fa-facebook, .fa-instagram, .fa-github{
  color: white;
}
.icon-section{
  display: flex;
 gap: 5px;
}
.icon-section p{
  padding-right: 10px;
}
.footer-bottom{
  display: flex;
  justify-content: space-between;
  color: white;
  margin-top: 20px;
  opacity: 60%;
}

